--- a/css/style.css
+++ b/css/style.css
@@ -7,21 +7,17 @@
 
 body {
   background: #333;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   width: 100%;
   height: 100vh;
+  display: grid;
+  grid-template-rows: 100px calc(100vh - 100px);
+  overflow: hidden;
 }
 
 header {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  height: 100px;
   width: 100%;
-  position: absolute;
-  top: 0;
 }
 
 .timer-side,
@@ -30,8 +26,14 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.5rem;
   flex-direction: column;
+}
+.timer-side div,
+.timer-side span,
+.timer-game div,
+.timer-game span {
+  font-size: 1.2rem;
+  padding: 4px;
 }
 
 h1 {
@@ -42,14 +44,72 @@ h1 {
   align-items: center;
 }
 
-.game-box {
-  border: 1px solid red;
-  padding: 30px;
-  width: 400px;
-  height: 400px;
+main {
+  border: 1px solid pink;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  transform: skewY(0deg);
-  transition: 0.3s;
+  position: relative;
+}
+
+.side1,
+.side2,
+.side3 {
+  border: 1px solid red;
+  width: 400px;
+  height: 400px;
+  display: grid;
+  padding: 60px 50px 20px 50px;
+  grid-template-rows: 1fr 2fr 1fr;
+}
+.side1 .health-bar,
+.side2 .health-bar,
+.side3 .health-bar {
+  border: 1px solid green;
+  width: 100%;
+  height: 70px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  padding: 10px 45px;
+}
+.side1 .health-bar div,
+.side2 .health-bar div,
+.side3 .health-bar div {
+  border: 1px solid purple;
+  height: 100%;
+  border-radius: 50%;
+}
+.side1 .quiz,
+.side2 .quiz,
+.side3 .quiz {
+  border: 1px solid orange;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.side1 .quiz span,
+.side2 .quiz span,
+.side3 .quiz span {
+  margin: 5px;
+  background: rgb(41, 41, 41);
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 1.2rem;
+}
+.side1 .quiz input,
+.side2 .quiz input,
+.side3 .quiz input {
+  height: 40px;
+  width: 100px;
+  font-size: 1.2rem;
+  border-radius: 3px;
+  padding: 5px;
+}
+.side1 input,
+.side2 input,
+.side3 input {
+  margin: 10px;
 }/*# sourceMappingURL=style.css.map */
