--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,28 +10,30 @@
 
 body {
     background: #333;
-    @include flex-center-childs();
-    flex-direction: column;
     width: 100%;
     height: 100vh;
+    display: grid;
+    grid-template-rows: 100px calc(100vh - 100px);
+    overflow: hidden;
 }
 
 header {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    // border: 1px solid yellow;
-    height: 100px;
     width: 100%;
-    position: absolute;
-    top: 0;
 }
 
 .timer-side,
 .timer-game {
     border: 1px solid green;
     @include flex-center-childs();
-    font-size: 1.5rem;
     flex-direction: column;
+
+    div,
+    span {
+        font-size: 1.2rem;
+        padding: 4px;
+    }
 }
 
 h1 {
@@ -40,12 +42,64 @@ h1 {
     @include flex-center-childs();
 }
 
-.game-box {
+main {
+    border: 1px solid pink;
+    width: 100%;
+    @include flex-center-childs();
+    position: relative;
+}
+
+.side1,
+.side2,
+.side3 {
     border: 1px solid red;
-    padding: 30px;
     width: 400px;
     height: 400px;
-    @include flex-center-childs();
-    transform: skewY(0deg);
-    transition: 0.3s;
+    display: grid;
+    padding: 60px 50px 20px 50px;
+    grid-template-rows: 1fr 2fr 1fr;
+    // transform: skewY(30deg);
+    // transition: $change-side-timer;
+
+    .health-bar {
+        border: 1px solid green;
+        width: 100%;
+        height: 70px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
+        padding: 10px 45px;
+
+        div {
+            border: 1px solid purple;
+            height: 100%;
+            border-radius: 50%;
+        }
+    }
+
+    .quiz {
+        border: 1px solid orange;
+        @include flex-center-childs();
+
+        span {
+            margin: 5px;
+            background: rgb(41, 41, 41);
+            color: white;
+            padding: 5px;
+            border-radius: 5px;
+            font-size: 1.2rem;
+        }
+
+        input {
+            height: 40px;
+            width: 100px;
+            font-size: 1.2rem;
+            border-radius: 3px;
+            padding: 5px;
+        }
+    }
+
+    input {
+        margin: 10px;
+    }
 }
