--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --background-color: red;
+  --game-color: green;
+  --line-color: blue;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -6,7 +12,7 @@
 }
 
 body {
-  background: #333;
+  background: var(--background-color);
   width: 100%;
   height: 100vh;
   display: grid;
@@ -22,7 +28,6 @@ header {
 
 .timer-side,
 .timer-game {
-  border: 1px solid green;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -38,14 +43,13 @@ header {
 
 h1 {
   font-size: 2rem;
-  border: 1px solid rgb(72, 0, 255);
   display: flex;
   justify-content: center;
   align-items: center;
+  text-shadow: -2px 0 rgba(255, 0, 251, 0.25), 2px 0 rgba(255, 0, 0, 0.25);
 }
 
 main {
-  border: 1px solid pink;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -56,35 +60,42 @@ main {
 .side1,
 .side2,
 .side3 {
-  border: 1px solid red;
+  border: 1px solid var(--line-color);
+  background: var(--game-color);
   width: 400px;
   height: 400px;
   display: grid;
   padding: 60px 50px 20px 50px;
-  grid-template-rows: 1fr 2fr 1fr;
+  grid-template-rows: 1fr 1fr 2fr 1.4fr;
 }
 .side1 .health-bar,
 .side2 .health-bar,
 .side3 .health-bar {
-  border: 1px solid green;
   width: 100%;
   height: 70px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
+  gap: 45px;
   padding: 10px 45px;
 }
 .side1 .health-bar div,
 .side2 .health-bar div,
 .side3 .health-bar div {
-  border: 1px solid purple;
+  border: 1px solid var(--line-color);
   height: 100%;
   border-radius: 50%;
+}
+.side1 .solve-me,
+.side2 .solve-me,
+.side3 .solve-me {
+  letter-spacing: 1px;
+  display: flex;
+  align-items: end;
+  padding-left: 15px;
 }
 .side1 .quiz,
 .side2 .quiz,
 .side3 .quiz {
-  border: 1px solid orange;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -93,11 +104,12 @@ main {
 .side2 .quiz span,
 .side3 .quiz span {
   margin: 5px;
-  background: rgb(41, 41, 41);
+  background: var(--line-color);
   color: white;
   padding: 5px;
   border-radius: 5px;
   font-size: 1.2rem;
+  font-family: monospace;
 }
 .side1 .quiz input,
 .side2 .quiz input,
@@ -107,9 +119,22 @@ main {
   font-size: 1.2rem;
   border-radius: 3px;
   padding: 5px;
-}
-.side1 input,
-.side2 input,
-.side3 input {
   margin: 10px;
+  background: var(--background-color);
+}
+.side1 .submit-btn,
+.side2 .submit-btn,
+.side3 .submit-btn {
+  background: var(--background-color);
+  margin: 10px;
+  border-radius: 5px;
+  transition: 0.2s;
+  font-size: 1.1rem;
+  letter-spacing: 1.5px;
+  cursor: pointer;
+}
+.side1 .submit-btn:hover,
+.side2 .submit-btn:hover,
+.side3 .submit-btn:hover {
+  letter-spacing: 5px;
 }/*# sourceMappingURL=style.css.map */
