--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,12 @@
 @import "config";
 @import "mixin";
 
+:root {
+    --background-color: red;
+    --game-color: green;
+    --line-color: blue;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -9,7 +15,7 @@
 }
 
 body {
-    background: #333;
+    background: var(--background-color);
     width: 100%;
     height: 100vh;
     display: grid;
@@ -25,7 +31,7 @@ header {
 
 .timer-side,
 .timer-game {
-    border: 1px solid green;
+    // border: 1px solid green;
     @include flex-center-childs();
     flex-direction: column;
 
@@ -38,12 +44,14 @@ header {
 
 h1 {
     font-size: 2rem;
-    border: 1px solid rgb(72, 0, 255);
+    // border: 1px solid rgb(72, 0, 255);
     @include flex-center-childs();
+    // background: var(--game-color);
+    text-shadow: -2px 0 rgba(255, 0, 251, 0.25), 2px 0 rgba(255, 0, 0, 0.25);
 }
 
 main {
-    border: 1px solid pink;
+    // border: 1px solid pink;
     width: 100%;
     @include flex-center-childs();
     position: relative;
@@ -52,42 +60,52 @@ main {
 .side1,
 .side2,
 .side3 {
-    border: 1px solid red;
+    border: 1px solid var(--line-color);
+    background: var(--game-color);
     width: 400px;
     height: 400px;
     display: grid;
     padding: 60px 50px 20px 50px;
-    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr 2fr 1.4fr;
     // transform: skewY(30deg);
     // transition: $change-side-timer;
 
     .health-bar {
-        border: 1px solid green;
+        // border: 1px solid green;
         width: 100%;
         height: 70px;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 30px;
+        gap: 45px;
         padding: 10px 45px;
 
         div {
-            border: 1px solid purple;
+            border: 1px solid var(--line-color);
             height: 100%;
             border-radius: 50%;
         }
     }
 
+    .solve-me {
+        // border: 1px solid red;
+        letter-spacing: 1px;
+        display: flex;
+        align-items: end;
+        padding-left: 15px;
+    }
+
     .quiz {
-        border: 1px solid orange;
+        // border: 1px solid orange;
         @include flex-center-childs();
 
         span {
             margin: 5px;
-            background: rgb(41, 41, 41);
+            background: var(--line-color);
             color: white;
             padding: 5px;
             border-radius: 5px;
             font-size: 1.2rem;
+            font-family: monospace;
         }
 
         input {
@@ -96,10 +114,26 @@ main {
             font-size: 1.2rem;
             border-radius: 3px;
             padding: 5px;
+            margin: 10px;
+            background: var(--background-color);
         }
     }
 
-    input {
+    .submit-btn {
+        background: var(--background-color);
         margin: 10px;
+        border-radius: 5px;
+        transition: 0.2s;
+        font-size: 1.1rem;
+        letter-spacing: 1.5px;
+        cursor: pointer;
+
+        &:hover {
+            letter-spacing: 5px;
+        }
+
+        &:active {
+            // background: var(--game-color);
+        }
     }
 }
