--- a/scss/style.scss
+++ b/scss/style.scss
@@ -55,6 +55,12 @@ main {
     width: 100%;
     @include flex-center-childs();
     position: relative;
+    // ---------------------
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
+    // transform-style: preserve-3d;
+    // transform: rotateX(260deg) rotateZ(-100deg) translate(-50%, -50%);
 }
 
 .side1,
@@ -136,4 +142,19 @@ main {
             // background: var(--game-color);
         }
     }
+}
+
+.side1{
+
+    background: red;
+}
+
+.side2{
+
+}
+
+.side3{
+
+    background: blue;
+    // display: none;
 }
