--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,17 @@ body {
   background: var(--background-color);
   width: 100%;
   height: 100vh;
-  display: grid;
-  grid-template-rows: 100px calc(100vh - 100px);
   overflow: hidden;
 }
 
 header {
+  position: absolute;
+  top: 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 100%;
+  background: var(--background-color);
+  z-index: 2;
 }
 
 .timer-side,
@@ -37,24 +39,27 @@ header {
 .timer-side span,
 .timer-game div,
 .timer-game span {
-  font-size: 1.2rem;
-  padding: 4px;
+  font-size: 3.37vh;
+  padding: 0.56vh;
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 5.61vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-shadow: -2px 0 rgba(255, 0, 251, 0.25), 2px 0 rgba(255, 0, 0, 0.25);
+  text-shadow: -0.28vh 0 rgba(255, 0, 251, 0.25), 0.28vhpx 0 rgba(255, 0, 0, 0.25);
 }
 
 main {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+  width: 400px;
+  height: 400px;
+  position: absolute;
+  top: 50%;
+  left: 35%;
+  transform-style: preserve-3d;
+  transform: rotateX(260deg) rotateZ(-100deg);
 }
 
 .side1,
@@ -67,6 +72,11 @@ main {
   display: grid;
   padding: 60px 50px 20px 50px;
   grid-template-rows: 1fr 1fr 2fr 1.4fr;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
 }
 .side1 .health-bar,
 .side2 .health-bar,
@@ -138,10 +148,19 @@ main {
 .side3 .submit-btn:hover {
   letter-spacing: 5px;
 }
+
 .side1 {
-  background: red;
+  width: 400px;
+  transform: translateZ(-200px) translateY(200px) rotateY(90deg) rotate(90deg);
+  transform: translateZ(-200px) translateY(200px) rotateY(90deg) rotate(90deg);
+  transform-origin: right;
+}
+
+.side2 {
+  transform: rotateX(90deg) scaleX(-1);
+  transform-origin: bottom;
 }
 
 .side3 {
-  background: blue;
+  transform: translateZ(-400px) scaleX(-1);
 }/*# sourceMappingURL=style.css.map */
