Fix timer.js / Start working on end-screen

--- a/css/style.css
+++ b/css/style.css
@@ -210,4 +210,10 @@ main {
 
 .shake {
   animation: shake 0.3s;
+}
+
+.end-screen {
+  background: red;
+  width: 100%;
+  height: 100vh;
 }/*# sourceMappingURL=style.css.map */
