--- a/scss/style.scss
+++ b/scss/style.scss
@@ -103,11 +103,6 @@ main {
             height: 100%;
             border-radius: 50%;
         }
-
-        .lost-health {
-            background: var(--line-color);
-            box-shadow: 0 0 5px var(--background-color);
-        }
     }
 
     .solve-me {
@@ -168,6 +163,11 @@ main {
     }
 }
 
+.lost-health {
+    background: var(--line-color);
+    box-shadow: 0 0 5px var(--background-color);
+}
+
 .side1 {
     width: 400px;
     transform: translateZ(-200px) translateY(200px) rotateY(90deg) rotate(90deg);
@@ -187,8 +187,32 @@ main {
     animation: shake 0.3s;
 }
 
-.end-screen{
-    background: red;
+.end-screen {
+    display: none;
+    // display: grid;
+
+    box-shadow: inset 0px 0px 400px 340px var(--background-color);
+
     width: 100%;
     height: 100vh;
+    padding: 110px 200px;
+    position: relative;
+    z-index: 1;
+
+    grid-template-columns: 1fr 1fr 2fr 2fr;
+    grid-template-rows: repeat(5, 1fr);
+
+    div {
+        border: 1px solid var(--line-color);
+        padding: 10px;
+        @include flex-center-childs();
+    }
+
+    &__health__block {
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        margin: 8px;
+        // background: var(--game-color);
+    }
 }
