--- a/scss/style.scss
+++ b/scss/style.scss
@@ -190,14 +190,22 @@ main {
 .end-screen {
     display: none;
     // display: grid;
+    opacity: 0;
+    // opacity: 1;
 
-    box-shadow: inset 0px 0px 400px 340px var(--background-color);
+    // box-shadow: inset 0px 0px 400px 340px var(--background-color);
+    box-shadow: inset 0px 0px 600px 250px var(--background-color);
 
-    width: 100%;
-    height: 100vh;
-    padding: 110px 200px;
-    position: relative;
+    width: 882px;
+    width: 900px;
+    height: 535px;
+    height: 490px;
+    position: absolute;
+    top: 48%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 1;
+    transition: opacity 0.3s;
 
     grid-template-columns: 1fr 1fr 2fr 2fr;
     grid-template-rows: repeat(5, 1fr);
@@ -214,5 +222,39 @@ main {
         height: 40px;
         margin: 8px;
         // background: var(--game-color);
+    }
+
+    &__question {
+        letter-spacing: 1px;
+        font-size: 1.1rem;
+    }
+}
+
+.end-screen-btns {
+    position: absolute;
+    // bottom: 3px;
+    bottom: -200px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    // border: 1px solid red;
+    width: 100%;
+    @include flex-center-childs();
+    gap: 50px;
+    transition: bottom 400ms 100ms;
+
+    button {
+        width: 250px;
+        height: 60px;
+        border-radius: 5px;
+        border: 2px solid var(--game-color);
+        background: var(--background-color);
+        box-shadow: 0 3px 3px var(--line-color);
+        transition: transform 0.15s, box-shadow 0.15s;
+        cursor: pointer;
+
+        &:active {
+            box-shadow: 0 1px 3px var(--line-color);
+            transform: translate(0, 2px);
+        }
     }
 }
