--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,9 +11,9 @@
 }
 
 :root {
-    --background-color: red;
-    --game-color: green;
-    --line-color: blue;
+    --background-color: black;
+    --game-color: black;
+    --line-color: black;
 }
 
 ::selection {
@@ -54,6 +54,43 @@ h1 {
     @include flex-center-childs();
     text-shadow: -0.28vh 0 rgba(255, 0, 251, 0.25),
         0.28vh 0 rgba(255, 0, 0, 0.25);
+}
+
+.ready-screen {
+    @include ready-end-screen();
+    @include flex-center-childs();
+    flex-direction: column;
+    transition: opacity 0.3s;
+    // transform: rotateX(90deg) translate(-50%, -50%);
+
+    &__text {
+        font-size: 3rem;
+        text-shadow: 0 2px 4px var(--line-color);
+    }
+
+    &__btn {
+        font-size: 1.5rem;
+        padding: 15px;
+        width: 170px;
+        margin-top: 60px;
+        border-radius: 5px;
+        background: var(--game-color);
+        cursor: pointer;
+        box-shadow: 0 3px 3px var(--line-color);
+        border: 2px solid var(--line-color);
+        transition: letter-spacing 0.2s, transform 0.2s, box-shadow 0.2s;
+
+        &:hover {
+            letter-spacing: 1px;
+        }
+
+        &:active {
+            letter-spacing: 0.5px;
+            box-shadow: 0 1px 3px var(--line-color),
+                inset 0 0 10px var(--line-color);
+            transform: translate(0, 2px);
+        }
+    }
 }
 
 main {
@@ -141,8 +178,8 @@ main {
 
             &::-webkit-outer-spin-button,
             &::-webkit-inner-spin-button {
-              -webkit-appearance: none;
-              margin: 0;
+                -webkit-appearance: none;
+                margin: 0;
             }
         }
     }
@@ -151,7 +188,7 @@ main {
         background: var(--background-color);
         margin: 10px;
         border-radius: 5px;
-        transition: 0.2s;
+        transition: letter-spacing 0.2s;
         font-size: 1.1rem;
         letter-spacing: 1.5px;
 
@@ -199,24 +236,7 @@ main {
     opacity: 0;
     // opacity: 1;
 
-    // box-shadow: inset 0px 0px 600px 250px var(--background-color);
-    box-shadow: inset 0px 0px 600px 260px var(--background-color);
-
-    // width: 882px;
-    width: 900px;
-    // height: 535px;
-    // height: 490px;
-
-    height: 550px;
-    padding-bottom: 60px;
-
-
-    position: absolute;
-    top: 52%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    transition: opacity 0.3s;
+    @include ready-end-screen();
 
     grid-template-columns: 1fr 1fr 2fr 2fr;
     grid-template-rows: repeat(5, 1fr);
