--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -16,3 +16,31 @@
     z-index: 1;
     transition: opacity 0.3s;
 }
+
+@mixin bottomBtns($btm) {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    @include flex-center-childs();
+    gap: 50px;
+    transition: bottom 400ms 100ms;
+    z-index: 2;
+    bottom: $btm;
+
+    button {
+        width: 250px;
+        height: 60px;
+        border-radius: 5px;
+        border: 2px solid var(--game-color);
+        background: var(--background-color);
+        box-shadow: 0 3px 3px var(--line-color);
+        transition: transform 0.15s, box-shadow 0.15s;
+        cursor: pointer;
+
+        &:active {
+            box-shadow: 0 1px 3px var(--line-color);
+            transform: translate(0, 2px);
+        }
+    }
+}
