--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
   box-sizing: border-box;
   font-size: 20px;
   cursor: default;
+  transition: background 0.2s;
 }
 
 :root {
@@ -83,12 +84,11 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
-  transition: opacity 0.3s;
+  transition: opacity 0.3s, background 0.2s, box-shadow 0.2s;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  transition: opacity 0.3s;
 }
 .ready-screen__text {
   font-size: 3rem;
@@ -104,7 +104,7 @@ h1 {
   cursor: pointer;
   box-shadow: 0 3px 3px var(--line-color);
   border: 2px solid var(--line-color);
-  transition: letter-spacing 0.2s, transform 0.2s, box-shadow 0.2s;
+  transition: letter-spacing 0.2s, transform 0.2s, box-shadow 0.2s, background 0.2s;
 }
 .ready-screen__ready:hover {
   letter-spacing: 1px;
@@ -116,17 +116,19 @@ h1 {
 }
 
 .setting-btns {
+  border: 1px solid red;
   position: absolute;
-  left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 50px;
-  transition: bottom 400ms 100ms;
+  transition: bottom 400ms 100ms, background 0.2s;
   z-index: 2;
+  left: 50%;
   bottom: 3px;
+  z-index: 4;
 }
 .setting-btns button {
   width: 250px;
@@ -135,12 +137,32 @@ h1 {
   border: 2px solid var(--game-color);
   background: var(--background-color);
   box-shadow: 0 3px 3px var(--line-color);
-  transition: transform 0.15s, box-shadow 0.15s;
+  transition: transform 0.15s, box-shadow 0.15s, background 0.2s;
+  cursor: pointer;
+}
+.setting-btns button form,
+.setting-btns button label,
+.setting-btns button input {
   cursor: pointer;
 }
 .setting-btns button:active {
   box-shadow: 0 1px 3px var(--line-color);
   transform: translate(0, 2px);
+}
+.setting-btns__nav {
+  position: absolute;
+  top: -55px;
+  border: 1px solid var(--line-color);
+  background: var(--game-color);
+  color: var(--background-color);
+  transform: rotate(-90deg);
+  padding: 7px;
+  border-radius: 0 5px 5px 0;
+}
+.setting-btns__nav div {
+  font-weight: 900;
+  font-size: 1.7rem;
+  font-family: sans-serif;
 }
 .setting-btns .checkbox-inp {
   transform: scale(1.4) translate(3px, 1px);
@@ -155,7 +177,7 @@ main {
   left: 35%;
   transform-style: preserve-3d;
   transform: rotateX(260deg) rotateZ(-100deg);
-  transition: transform 0.7s;
+  transition: transform 0.7s, background 0.2s;
 }
 
 .side1,
@@ -248,7 +270,7 @@ main {
   background: var(--background-color);
   margin: 10px;
   border-radius: 5px;
-  transition: letter-spacing 0.2s;
+  transition: letter-spacing 0.2s, background 0.2s;
   font-size: 1.1rem;
   letter-spacing: 1.5px;
 }
@@ -304,7 +326,7 @@ main {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
-  transition: opacity 0.3s;
+  transition: opacity 0.3s, background 0.2s, box-shadow 0.2s;
   grid-template-columns: 1fr 1fr 2fr 2fr;
   grid-template-rows: repeat(5, 1fr);
 }
@@ -328,15 +350,15 @@ main {
 
 .end-screen-btns {
   position: absolute;
-  left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 50px;
-  transition: bottom 400ms 100ms;
+  transition: bottom 400ms 100ms, background 0.2s;
   z-index: 2;
+  left: 50%;
   bottom: -200px;
 }
 .end-screen-btns button {
@@ -346,7 +368,12 @@ main {
   border: 2px solid var(--game-color);
   background: var(--background-color);
   box-shadow: 0 3px 3px var(--line-color);
-  transition: transform 0.15s, box-shadow 0.15s;
+  transition: transform 0.15s, box-shadow 0.15s, background 0.2s;
+  cursor: pointer;
+}
+.end-screen-btns button form,
+.end-screen-btns button label,
+.end-screen-btns button input {
   cursor: pointer;
 }
 .end-screen-btns button:active {
