--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -14,18 +14,19 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
-    transition: opacity 0.3s;
+    transition: opacity 0.3s, $change-theme, $change-theme-box-shadow;
 }
 
 @mixin bottomBtns($btm) {
     position: absolute;
-    left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
+    // height: 90px;
     @include flex-center-childs();
     gap: 50px;
-    transition: bottom 400ms 100ms;
+    transition: bottom 400ms 100ms, $change-theme;
     z-index: 2;
+    left: 50%;
     bottom: $btm;
 
     button {
@@ -35,8 +36,14 @@
         border: 2px solid var(--game-color);
         background: var(--background-color);
         box-shadow: 0 3px 3px var(--line-color);
-        transition: transform 0.15s, box-shadow 0.15s;
+        transition: transform 0.15s, box-shadow 0.15s, $change-theme;
         cursor: pointer;
+
+        form,
+        label,
+        input {
+            cursor: pointer;
+        }
 
         &:active {
             box-shadow: 0 1px 3px var(--line-color);
