--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@
     box-sizing: border-box;
     font-size: 20px;
     cursor: default;
+    transition: $change-theme;
 }
 
 :root {
@@ -60,8 +61,6 @@ h1 {
     @include ready-end-screen();
     @include flex-center-childs();
     flex-direction: column;
-    transition: opacity 0.3s;
-    // transform: rotateX(90deg) translate(-50%, -50%);
 
     &__text {
         font-size: 3rem;
@@ -78,7 +77,8 @@ h1 {
         cursor: pointer;
         box-shadow: 0 3px 3px var(--line-color);
         border: 2px solid var(--line-color);
-        transition: letter-spacing 0.2s, transform 0.2s, box-shadow 0.2s;
+        transition: letter-spacing 0.2s, transform 0.2s, box-shadow 0.2s,
+            $change-theme;
 
         &:hover {
             letter-spacing: 1px;
@@ -94,7 +94,27 @@ h1 {
 }
 
 .setting-btns {
+    border: 1px solid red;
     @include bottomBtns(3px);
+    z-index: 4;
+
+    &__nav {
+        position: absolute;
+        top: -55px;
+        border: 1px solid var(--line-color);
+        background: var(--game-color);
+        color: var(--background-color);
+        transform: rotate(-90deg);
+        padding: 7px;
+        border-radius: 0 5px 5px 0;
+        // opacity: 0.3;
+        
+        div {
+            font-weight: 900;
+            font-size: 1.7rem;
+            font-family: sans-serif;
+        }
+    }
 
     .checkbox-inp {
         transform: scale(1.4) translate(3px, 1px);
@@ -116,7 +136,7 @@ main {
 
     // transform: rotateX(185deg) rotateZ(-179deg) rotateY(5deg) translate(0, -200px);
 
-    transition: transform $change-side-timer;
+    transition: transform $change-side-timer, $change-theme;
 }
 
 .side1,
@@ -196,7 +216,7 @@ main {
         background: var(--background-color);
         margin: 10px;
         border-radius: 5px;
-        transition: letter-spacing 0.2s;
+        transition: letter-spacing 0.2s, $change-theme;
         font-size: 1.1rem;
         letter-spacing: 1.5px;
 
