Add settingBtnsNav / Fix localStorge / + A lot of bug fixes and improvments

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-shadow: -0.28vh 0 rgba(255, 0, 251, 0.25), 0.28vh 0 rgba(255, 0, 0, 0.25);
+  text-shadow: 0.28vh 0 rgba(98, 0, 255, 0.25), -0.28vh 0 rgba(255, 0, 0, 0.25);
 }
 
 .ready-screen {
@@ -92,7 +92,7 @@ h1 {
 }
 .ready-screen__text {
   font-size: 3rem;
-  text-shadow: 0 2px 4px var(--line-color);
+  text-shadow: 0 2px 5px var(--line-color);
 }
 .ready-screen__ready {
   font-size: 1.5rem;
@@ -116,18 +116,25 @@ h1 {
 }
 
 .setting-btns {
-  border: 1px solid red;
+  border-top: 1px solid var(--game-color);
   position: absolute;
   transform: translate(-50%, -50%);
   width: 100%;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 5px;
+  align-items: flex-start;
   gap: 50px;
   transition: bottom 400ms 100ms, background 0.2s;
   z-index: 2;
   left: 50%;
-  bottom: 3px;
+  bottom: -300px;
+  padding-top: 20px;
+  background: var(--game-color);
+  box-shadow: inset 0px 0px 70px 80px var(--background-color);
+  transition: bottom 0.3s, background 0.2s, box-shadow 0.2s;
   z-index: 4;
 }
 .setting-btns button {
@@ -151,18 +158,30 @@ h1 {
 }
 .setting-btns__nav {
   position: absolute;
-  top: -55px;
+  top: -30px;
   border: 1px solid var(--line-color);
   background: var(--game-color);
   color: var(--background-color);
-  transform: rotate(-90deg);
-  padding: 7px;
-  border-radius: 0 5px 5px 0;
+  width: 45px;
+  height: 30px;
+  border-radius: 5px 5px 0 0;
+  opacity: 0.3;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background 0.2s, opacity 0.2s;
+}
+.setting-btns__nav:hover {
+  opacity: 1;
+  transition: background 0.2s, opacity 0.1s;
 }
 .setting-btns__nav div {
-  font-weight: 900;
-  font-size: 1.7rem;
+  transform: rotate(-90deg);
+  font-weight: 600;
+  font-size: 1.6rem;
   font-family: sans-serif;
+  cursor: pointer;
 }
 .setting-btns .checkbox-inp {
   transform: scale(1.4) translate(3px, 1px);
@@ -282,12 +301,17 @@ main {
 .side1 .submit-btn-effects:hover,
 .side2 .submit-btn-effects:hover,
 .side3 .submit-btn-effects:hover {
-  letter-spacing: 4px;
+  letter-spacing: 2px;
 }
 .side1 .submit-btn-effects:active,
 .side2 .submit-btn-effects:active,
 .side3 .submit-btn-effects:active {
-  letter-spacing: 3px;
+  letter-spacing: 1.5px;
+}
+
+input[type=checkbox] {
+  accent-color: var(--game-color);
+  transition: accent-color 0.2s;
 }
 
 .lost-health {
@@ -352,14 +376,17 @@ main {
   position: absolute;
   transform: translate(-50%, -50%);
   width: 100%;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 5px;
+  align-items: flex-start;
   gap: 50px;
   transition: bottom 400ms 100ms, background 0.2s;
   z-index: 2;
   left: 50%;
-  bottom: -200px;
+  bottom: -400px;
 }
 .end-screen-btns button {
   width: 250px;
