--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -21,8 +21,10 @@
     position: absolute;
     transform: translate(-50%, -50%);
     width: 100%;
-    // height: 90px;
+    height: 200px;
     @include flex-center-childs();
+    padding-top: 5px;
+    align-items: flex-start;
     gap: 50px;
     transition: bottom 400ms 100ms, $change-theme;
     z-index: 2;
