Broke SCSS files

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,11 @@
 @import "config";
 @import "mixin";
 @import "keyframes";
+@import "cube";
+@import "end-screen";
+@import "header";
+@import "ready-screen";
+@import "setting-btns";
 
 * {
     padding: 0;
@@ -17,10 +22,6 @@
     --line-color: black;
 }
 
-::selection {
-    background: transparent;
-}
-
 body {
     background: var(--background-color);
     width: 100%;
@@ -28,288 +29,6 @@ body {
     overflow: hidden;
 }
 
-header {
-    position: absolute;
-    top: 0;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    width: 100%;
-    background: var(--background-color);
-    z-index: 2;
-}
-
-.timer-side,
-.timer-game {
-    @include flex-center-childs();
-    flex-direction: column;
-
-    div,
-    span {
-        font-size: 3.37vh;
-        padding: 0.56vh;
-    }
-}
-
-h1 {
-    font-size: 5.61vh;
-    @include flex-center-childs();
-    text-shadow: 0.28vh 0 rgba(98, 0, 255, 0.25),
-        -0.28vh 0 rgba(255, 0, 0, 0.25);
-}
-
-.ready-screen {
-    @include ready-end-screen();
-    @include flex-center-childs();
-    flex-direction: column;
-
-    &__text {
-        font-size: 3rem;
-        text-shadow: 0 2px 5px var(--line-color);
-    }
-
-    &__ready {
-        font-size: 1.5rem;
-        padding: 15px;
-        width: 170px;
-        margin-top: 60px;
-        border-radius: 5px;
-        background: var(--game-color);
-        cursor: pointer;
-        box-shadow: 0 3px 3px var(--line-color);
-        border: 2px solid var(--line-color);
-        transition: letter-spacing 0.2s, transform 0.2s, box-shadow 0.2s,
-            $change-theme;
-
-        &:hover {
-            letter-spacing: 1px;
-        }
-
-        &:active {
-            letter-spacing: 0.5px;
-            box-shadow: 0 1px 3px var(--line-color),
-                inset 0 0 10px var(--line-color);
-            transform: translate(0, 2px);
-        }
-    }
-}
-
-.setting-btns {
-    border-top: 1px solid var(--game-color);
-    @include bottomBtns(-300px);
-    padding-top: 20px;
-    background: var(--game-color);
-    box-shadow: inset 0px 0px 70px 80px var(--background-color);
-    transition: bottom 0.3s, $change-theme, $change-theme-box-shadow;
-
-    z-index: 4;
-
-    &__nav {
-        position: absolute;
-        top: -30px;
-        border: 1px solid var(--line-color);
-        background: var(--game-color);
-        color: var(--background-color);
-        width: 45px;
-        height: 30px;
-        // padding: 5px;
-        border-radius: 5px 5px 0 0;
-        opacity: 0.3;
-        cursor: pointer;
-        @include flex-center-childs();
-        transition: $change-theme, opacity 0.2s;
-
-        &:hover {
-            opacity: 1;
-            transition: $change-theme, opacity 0.1s;
-        }
-
-        div {
-            transform: rotate(-90deg);
-            font-weight: 600;
-            font-size: 1.6rem;
-            font-family: sans-serif;
-            cursor: pointer;
-        }
-    }
-
-    .checkbox-inp {
-        transform: scale(1.4) translate(3px, 1px);
-    }
-}
-
-main {
-    width: 100%;
-    width: 400px;
-    height: 400px;
-    position: absolute;
-    top: 50%;
-    left: 35%;
-    transform-style: preserve-3d;
-
-    transform: rotateX(260deg) rotateZ(-100deg);
-
-    // transform: rotateX(260deg) rotateZ(-170deg);
-
-    // transform: rotateX(185deg) rotateZ(-179deg) rotateY(5deg) translate(0, -200px);
-
-    transition: transform $change-side-timer, $change-theme;
-}
-
-.side1,
-.side2,
-.side3 {
-    border: 1px solid var(--line-color);
-    background: var(--game-color);
-    width: 400px;
-    height: 400px;
-    display: grid;
-    padding: 60px 50px 20px 50px;
-    grid-template-rows: 1fr 1fr 2fr 1.4fr;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: absolute;
-
-    .health-bar {
-        width: 301px;
-        height: 70px;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 45px;
-        padding: 14px 45px;
-
-        &__blocks {
-            border: 1px solid var(--line-color);
-            height: 100%;
-            border-radius: 50%;
-        }
-    }
-
-    .solve-me {
-        letter-spacing: 1px;
-        display: flex;
-        align-items: end;
-        padding-left: 15px;
-    }
-
-    .quiz {
-        @include flex-center-childs();
-
-        span {
-            margin: 5px;
-            background: var(--line-color);
-            color: white;
-            padding: 5px;
-            border-radius: 5px;
-            font-size: 1.2rem;
-            font-family: monospace;
-        }
-
-        input {
-            height: 40px;
-            width: 100px;
-            font-size: 1.2rem;
-            border-radius: 3px;
-            padding: 5px;
-            margin: 10px;
-            background: var(--background-color);
-
-            &::selection {
-                background: var(--game-color);
-                color: var(--background-color);
-            }
-
-            &::-webkit-outer-spin-button,
-            &::-webkit-inner-spin-button {
-                -webkit-appearance: none;
-                margin: 0;
-            }
-        }
-    }
-
-    .submit-btn {
-        background: var(--background-color);
-        margin: 10px;
-        border-radius: 5px;
-        transition: letter-spacing 0.2s, $change-theme;
-        font-size: 1.1rem;
-        letter-spacing: 1.5px;
-
-        &-effects {
-            cursor: pointer;
-
-            &:hover {
-                letter-spacing: 2px;
-            }
-
-            &:active {
-                letter-spacing: 1.5px;
-            }
-        }
-    }
-}
-
-input[type="checkbox"] {
-    accent-color: var(--game-color);
-    transition: accent-color 0.2s;
-}
-
-.lost-health {
-    background: var(--line-color);
-    box-shadow: 0 0 5px var(--background-color);
-}
-
-.side1 {
-    width: 400px;
-    transform: translateZ(-200px) translateY(200px) rotateY(90deg) rotate(90deg);
-    transform-origin: right;
-}
-
-.side2 {
-    transform: rotateX(90deg) scaleX(-1);
-    transform-origin: bottom;
-}
-
-.side3 {
-    transform: translateZ(-400px) scaleX(-1);
-}
-
-.shake {
-    animation: shake 0.3s;
-}
-
-.end-screen {
-    display: none;
-    // display: grid;
-    opacity: 0;
-    // opacity: 1;
-
-    @include ready-end-screen();
-
-    grid-template-columns: 1fr 1fr 2fr 2fr;
-    grid-template-rows: repeat(5, 1fr);
-
-    div {
-        border: 1px solid var(--line-color);
-        padding: 10px;
-        @include flex-center-childs();
-    }
-
-    &__health__block {
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        margin: 8px;
-        // background: var(--game-color);
-    }
-
-    &__question {
-        letter-spacing: 1px;
-        font-size: 1.1rem;
-    }
-}
-
-.end-screen-btns {
-    @include bottomBtns(-400px);
+::selection {
+    background: transparent;
 }
